Fix minor tablet layout issue with margins

--- a/src/sass/grids/_yafgs-grid.scss
+++ b/src/sass/grids/_yafgs-grid.scss
@@ -12,15 +12,16 @@
   }
   max-width: $grid-max-width-lrg;
   margin: $std-margin auto;
+  // padding-left:
   &.medium{
     max-width: $grid-max-width-med;
   }
   &.small{
     max-width: $grid-max-width-sml;
   }
-  @media screen and (max-width: 767px) {
+  /* @media screen and (max-width: 767px) {
     margin: $std-margin;
-  }
+  } */
   .a-row{
     display: block;
     position: relative;
